// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox component matches snapshot (disabled) 1`] = `
<div
  className="fdsCheckable fdsCheckbox fdsCheckable--disabled"
>
  <input
    checked={false}
    className="media--xs"
    disabled={true}
    id="0ae455c1-53b4-4767-ab39-75a2b3f5c18d"
    name="snapshot_checkbox"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="flush--bottom"
    htmlFor="0ae455c1-53b4-4767-ab39-75a2b3f5c18d"
  >
    <div
      aria-checked={false}
      aria-label="Snapshot Label"
      role="checkbox"
    >
      <CheckEmptyIcon
        size="xs"
      />
    </div>
    <span
      className="padding--left--half"
    >
      Snapshot Label
    </span>
  </label>
</div>
`;

exports[`Checkbox component matches snapshot (with label) 1`] = `
<div
  className="fdsCheckable fdsCheckbox"
>
  <input
    checked={false}
    className="media--xs"
    disabled={false}
    id="de3bff09-e47f-4ccc-a78e-7ef670fa0c61"
    name="snapshot_checkbox"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="flush--bottom"
    htmlFor="de3bff09-e47f-4ccc-a78e-7ef670fa0c61"
  >
    <div
      aria-checked={false}
      aria-label="Snapshot Label"
      role="checkbox"
    >
      <CheckEmptyIcon
        size="xs"
      />
    </div>
    <span
      className="padding--left--half"
    >
      Snapshot Label
    </span>
  </label>
</div>
`;

exports[`Checkbox component matches snapshot (without label) 1`] = `
<div
  className="fdsCheckable fdsCheckbox"
>
  <input
    checked={false}
    className="media--xs"
    disabled={false}
    id="2c1ecf46-fcd2-4d1e-bbaf-96a9e15948d4"
    name="snapshot_checkbox"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="flush--bottom"
    htmlFor="2c1ecf46-fcd2-4d1e-bbaf-96a9e15948d4"
  >
    <div
      aria-checked={false}
      role="checkbox"
    >
      <CheckEmptyIcon
        size="xs"
      />
    </div>
    <span
      className="padding--left--half"
    />
  </label>
</div>
`;
